--- a/babylon-examples/steering/flocking/index.html
+++ b/babylon-examples/steering/flocking/index.html
@@ -1,161 +1,178 @@
 <html lang="en">
-	<head>
-		<title>Yuka | Steering Behaviors | Flocking</title>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
-		<link rel="stylesheet" type="text/css" href="../../lib/styles.css">
-		<link rel="shortcut icon" type="image/x-icon" href="https://mugen87.github.io/yuka/favicon.ico">
+  <head>
+    <title>Yuka | Steering Behaviors | Flocking</title>
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="../../../examples/lib/styles.css"
+    />
+    <link
+      rel="shortcut icon"
+      type="image/x-icon"
+      href="https://mugen87.github.io/yuka/favicon.ico"
+    />
 
-		<script src="https://cdn.jsdelivr.net/npm/babylonjs@4.2.0/babylon.min.js"></script>
-		<script src="https://cdn.babylonjs.com/inspector/babylon.inspector.bundle.js"></script>
-        <script src="https://cdn.babylonjs.com/materialsLibrary/babylonjs.materials.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/babylonjs@4.2.0/babylon.min.js"></script>
+    <script src="https://cdn.babylonjs.com/inspector/babylon.inspector.bundle.js"></script>
+    <script src="https://cdn.babylonjs.com/materialsLibrary/babylonjs.materials.min.js"></script>
+  </head>
+  <body>
+    <section id="info">
+      <p>
+        A group steering behavior defined by a combination of "Alignment",
+        "Cohesion" and "Separation".
+      </p>
+    </section>
+    <canvas
+      id="renderCanvas"
+      style="width: 100%; height: 100%; touch-action: none"
+    ></canvas>
+    <script type="module">
+      import * as YUKA from "../../../build/yuka.module.js";
+      import * as DAT from "https://cdn.jsdelivr.net/npm/dat.gui@0.7.7/build/dat.gui.module.js";
 
-	</head>
-<body>
+      let engine, scene;
 
-	<section id="info">
-		<p>
-			A group steering behavior defined by a combination of "Alignment", "Cohesion" and "Separation".
-		</p>
-	</section>
-	<canvas id="renderCanvas" style="width: 100%; height: 100%; touch-action: none"></canvas>
-	<script type="module">
+      let entityManager, time;
 
-		import * as YUKA from '../../../build/yuka.module.js';
-		import * as DAT from 'https://cdn.jsdelivr.net/npm/dat.gui@0.7.7/build/dat.gui.module.js';
+      const entityMatrix = new BABYLON.Matrix();
 
+      const params = {
+        alignment: 1,
+        cohesion: 0.9,
+        separation: 0.3,
+      };
 
-		let engine, scene;
+      init();
+      animate();
 
-		let entityManager, time;
+      function init() {
+        const canvas = document.getElementById("renderCanvas");
+        engine = new BABYLON.Engine(canvas, true, {}, true);
 
-		const entityMatrix = new BABYLON.Matrix();
+        scene = new BABYLON.Scene(engine);
+        scene.clearColor = new BABYLON.Color3(0, 0, 0);
+        //	scene.debugLayer.show();
 
-		const params = {
-			alignment: 1,
-			cohesion: 0.9,
-			separation: 0.3
-		};
+        const camera = new BABYLON.ArcRotateCamera(
+          "camera",
+          BABYLON.Tools.ToRadians(90),
+          BABYLON.Tools.ToRadians(0),
+          30,
+          BABYLON.Vector3.Zero(),
+          scene
+        );
 
-		init();
-		animate();
+        camera.target = new BABYLON.Vector3(0, 0, 0);
+        camera.attachControl(canvas, true);
 
-		function init() {
+        new BABYLON.HemisphericLight("light", new BABYLON.Vector3(1, 1, 0));
 
-			const canvas = document.getElementById( 'renderCanvas' );
-			engine = new BABYLON.Engine( canvas, true, {}, true );
+        const ground = BABYLON.MeshBuilder.CreateGround(
+          "ground",
+          { width: 40, height: 20 },
+          scene
+        );
+        ground.position.y = -1;
+        ground.material = new BABYLON.GridMaterial("grid", scene);
+        //
 
-			scene = new BABYLON.Scene( engine );
-			scene.clearColor = new BABYLON.Color3( 0, 0, 0 );
-		//	scene.debugLayer.show();
+        // game setup
 
-		const camera = new BABYLON.ArcRotateCamera("camera", BABYLON.Tools.ToRadians(90), BABYLON.Tools.ToRadians(0), 30, BABYLON.Vector3.Zero(), scene);
+        entityManager = new YUKA.EntityManager();
+        time = new YUKA.Time();
 
-		camera.target = new BABYLON.Vector3( 0, 0, 0 );
-		camera.attachControl(canvas, true);
+        const alignmentBehavior = new YUKA.AlignmentBehavior();
+        const cohesionBehavior = new YUKA.CohesionBehavior();
+        const separationBehavior = new YUKA.SeparationBehavior();
 
-			new BABYLON.HemisphericLight( 'light', new BABYLON.Vector3( 1, 1, 0 ) );
+        alignmentBehavior.weight = params.alignment;
+        cohesionBehavior.weight = params.cohesion;
+        separationBehavior.weight = params.separation;
 
-			const ground = BABYLON.MeshBuilder.CreateGround("ground", {width: 40, height: 20}, scene);
-			ground.position.y = -1;
-    		ground.material = new BABYLON.GridMaterial("grid", scene);
-			//
+        for (let i = 0; i < 50; i++) {
+          const vehicleMesh = BABYLON.MeshBuilder.CreateCylinder(
+            "cone",
+            { height: 0.5, diameterTop: 0, diameterBottom: 0.25 },
+            scene
+          );
+          vehicleMesh.rotation.x = Math.PI * 0.5;
+          vehicleMesh.bakeCurrentTransformIntoVertices();
 
+          const vehicle = new YUKA.Vehicle();
+          vehicle.maxSpeed = 1.5;
+          vehicle.updateNeighborhood = true;
+          vehicle.neighborhoodRadius = 10;
+          vehicle.rotation.fromEuler(0, Math.PI * Math.random(), 0);
+          vehicle.position.x = 10 - Math.random() * 20;
+          vehicle.position.z = 10 - Math.random() * 20;
 
-			
-			// game setup
+          vehicle.setRenderComponent(vehicleMesh, sync);
 
-			entityManager = new YUKA.EntityManager();
-			time = new YUKA.Time();
+          vehicle.steering.add(alignmentBehavior);
+          vehicle.steering.add(cohesionBehavior);
+          vehicle.steering.add(separationBehavior);
 
-			const alignmentBehavior = new YUKA.AlignmentBehavior();
-			const cohesionBehavior = new YUKA.CohesionBehavior();
-			const separationBehavior = new YUKA.SeparationBehavior();
+          const wanderBehavior = new YUKA.WanderBehavior();
+          wanderBehavior.weight = 0.5;
+          vehicle.steering.add(wanderBehavior);
 
-			alignmentBehavior.weight = params.alignment;
-			cohesionBehavior.weight = params.cohesion;
-			separationBehavior.weight = params.separation;
+          entityManager.add(vehicle);
+        }
 
-			for ( let i = 0; i < 50; i ++ ) {
+        // dat.gui
 
-			const vehicleMesh = BABYLON.MeshBuilder.CreateCylinder( 'cone', { height: 0.5, diameterTop: 0, diameterBottom: 0.25 }, scene );
-			vehicleMesh.rotation.x = Math.PI * 0.5;
-			vehicleMesh.bakeCurrentTransformIntoVertices();
+        const gui = new DAT.GUI({ width: 300 });
 
-				const vehicle = new YUKA.Vehicle();
-				vehicle.maxSpeed = 1.5;
-				vehicle.updateNeighborhood = true;
-				vehicle.neighborhoodRadius = 10;
-				vehicle.rotation.fromEuler( 0, Math.PI * Math.random(), 0 );
-				vehicle.position.x = 10 - Math.random() * 20;
-				vehicle.position.z = 10 - Math.random() * 20;
+        gui
+          .add(params, "alignment", 0.1, 2)
+          .name("alignment")
+          .onChange((value) => (alignmentBehavior.weight = value));
+        gui
+          .add(params, "cohesion", 0.1, 2)
+          .name("cohesion")
+          .onChange((value) => (cohesionBehavior.weight = value));
+        gui
+          .add(params, "separation", 0.1, 2)
+          .name("separation")
+          .onChange((value) => (separationBehavior.weight = value));
 
-				vehicle.setRenderComponent( vehicleMesh, sync );
+        gui.open();
 
-				vehicle.steering.add( alignmentBehavior );
-				vehicle.steering.add( cohesionBehavior );
-				vehicle.steering.add( separationBehavior );
+        //
 
-				const wanderBehavior = new YUKA.WanderBehavior();
-				wanderBehavior.weight = 0.5;
-				vehicle.steering.add( wanderBehavior );
+        //
 
-				entityManager.add( vehicle );
+        //
 
-			}
+        window.addEventListener("resize", onWindowResize, false);
+      }
 
-			// dat.gui
+      function onWindowResize() {
+        engine.resize();
+      }
 
-			const gui = new DAT.GUI( { width: 300 } );
+      function animate() {
+        requestAnimationFrame(animate);
 
-			gui.add( params, 'alignment', 0.1, 2 ).name( 'alignment' ).onChange( ( value ) => alignmentBehavior.weight = value );
-			gui.add( params, 'cohesion', 0.1, 2 ).name( 'cohesion' ).onChange( ( value ) => cohesionBehavior.weight = value );
-			gui.add( params, 'separation', 0.1, 2 ).name( 'separation' ).onChange( ( value ) => separationBehavior.weight = value );
+        const delta = time.update().getDelta();
 
-			gui.open();
+        entityManager.update(delta);
 
-			//
+        scene.render();
+      }
 
+      function sync(entity, renderComponent) {
+        entity.worldMatrix.toArray(entityMatrix.m);
 
-
-			//
-
-
-
-			//
-
-			window.addEventListener( 'resize', onWindowResize, false );
-
-		}
-
-		function onWindowResize() {
-
-			engine.resize();
-
-		}
-
-		function animate() {
-
-			requestAnimationFrame( animate );
-
-			const delta = time.update().getDelta();
-
-			entityManager.update( delta );
-
-			scene.render();
-
-		}
-
-		function sync( entity, renderComponent ) {
-
-			entity.worldMatrix.toArray( entityMatrix.m );
-
-			const matrix = renderComponent.getWorldMatrix();
-			matrix.copyFrom( entityMatrix );
-
-		}
-
-	</script>
-
-</body>
+        const matrix = renderComponent.getWorldMatrix();
+        matrix.copyFrom(entityMatrix);
+      }
+    </script>
+  </body>
 </html>
