--- a/babylon-examples/steering/interpose/index.html
+++ b/babylon-examples/steering/interpose/index.html
@@ -1,174 +1,199 @@
 <html lang="en">
-	<head>
-		<title>Yuka | Steering Behaviors | Interpose</title>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
-		<link rel="stylesheet" type="text/css" href="../../lib/styles.css">
-		<link rel="shortcut icon" type="image/x-icon" href="https://mugen87.github.io/yuka/favicon.ico">
+  <head>
+    <title>Yuka | Steering Behaviors | Interpose</title>
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="../../../examples/lib/styles.css"
+    />
+    <link
+      rel="shortcut icon"
+      type="image/x-icon"
+      href="https://mugen87.github.io/yuka/favicon.ico"
+    />
 
-		<script src="https://cdn.jsdelivr.net/npm/babylonjs@4.2.0/babylon.min.js"></script>
-		<script src="https://cdn.babylonjs.com/inspector/babylon.inspector.bundle.js"></script>
-        <script src="https://cdn.babylonjs.com/materialsLibrary/babylonjs.materials.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/babylonjs@4.2.0/babylon.min.js"></script>
+    <script src="https://cdn.babylonjs.com/inspector/babylon.inspector.bundle.js"></script>
+    <script src="https://cdn.babylonjs.com/materialsLibrary/babylonjs.materials.min.js"></script>
+  </head>
+  <body>
+    <section id="info">
+      <p>
+        "Interpose" produces a force that moves a vehicle to the midpoint of the
+        imaginary line connecting two other agents.
+      </p>
+    </section>
+    <canvas
+      id="renderCanvas"
+      style="width: 100%; height: 100%; touch-action: none"
+    ></canvas>
+    <script type="module">
+      import * as YUKA from "../../../build/yuka.module.js";
 
-	</head>
-<body>
+      let engine, scene;
+      let lines;
+      let linePoints = [];
 
-	<section id="info">
-		<p>
-			"Interpose" produces a force that moves a vehicle to the midpoint of the imaginary line connecting two other agents.
-		</p>
-	</section>
-	<canvas id="renderCanvas" style="width: 100%; height: 100%; touch-action: none"></canvas>
-	<script type="module">
+      let entityManager, time, pursuer, entity1, entity2, target1, target2;
 
-		import * as YUKA from '../../../build/yuka.module.js';
+      const entityMatrix = new BABYLON.Matrix();
 
-		let engine, scene;
-		let lines;
-		let linePoints = [];
+      init();
+      animate();
 
-		let entityManager, time, pursuer, entity1, entity2, target1, target2;
+      function init() {
+        const canvas = document.getElementById("renderCanvas");
+        engine = new BABYLON.Engine(canvas, true, {}, true);
 
-		const entityMatrix = new BABYLON.Matrix();
+        scene = new BABYLON.Scene(engine);
+        scene.clearColor = new BABYLON.Color3(0, 0, 0);
+        //	scene.debugLayer.show();
 
-		init();
-		animate();
+        const camera = new BABYLON.ArcRotateCamera(
+          "camera",
+          BABYLON.Tools.ToRadians(90),
+          BABYLON.Tools.ToRadians(0),
+          20,
+          BABYLON.Vector3.Zero(),
+          scene
+        );
 
-		function init() {
+        camera.target = new BABYLON.Vector3(0, 0, 0);
+        camera.attachControl(canvas, true);
 
-			const canvas = document.getElementById( 'renderCanvas' );
-			engine = new BABYLON.Engine( canvas, true, {}, true );
+        new BABYLON.HemisphericLight("light", new BABYLON.Vector3(1, 1, 0));
 
-			scene = new BABYLON.Scene( engine );
-			scene.clearColor = new BABYLON.Color3( 0, 0, 0 );
-		//	scene.debugLayer.show();
+        const ground = BABYLON.MeshBuilder.CreateGround(
+          "ground",
+          { width: 15, height: 15 },
+          scene
+        );
+        ground.position.y = -1;
+        ground.material = new BABYLON.GridMaterial("grid", scene);
 
-			const camera = new BABYLON.ArcRotateCamera("camera", BABYLON.Tools.ToRadians(90), BABYLON.Tools.ToRadians(0), 20, BABYLON.Vector3.Zero(), scene);
+        // meshes
 
-			camera.target = new BABYLON.Vector3( 0, 0, 0 );
-			camera.attachControl(canvas, true);
+        const pursuerMesh = BABYLON.MeshBuilder.CreateCylinder(
+          "cone",
+          { height: 0.75, diameterTop: 0, diameterBottom: 0.5 },
+          scene
+        );
+        pursuerMesh.rotation.x = Math.PI * 0.5;
+        pursuerMesh.bakeCurrentTransformIntoVertices();
 
-			new BABYLON.HemisphericLight( 'light', new BABYLON.Vector3( 1, 1, 0 ) );
+        const entityMesh1 = BABYLON.MeshBuilder.CreateBox(
+          "entityMesh1",
+          { size: 0.2 },
+          scene
+        );
+        const entityMesh2 = BABYLON.MeshBuilder.CreateBox(
+          "entityMesh2",
+          { size: 0.2 },
+          scene
+        );
 
-			const ground = BABYLON.MeshBuilder.CreateGround("ground", {width: 15, height: 15}, scene);
-			ground.position.y = -1;
-    		ground.material = new BABYLON.GridMaterial("grid", scene);
+        const entityMat = new BABYLON.StandardMaterial("entityMat", scene);
+        entityMat.disableLighting = true;
+        entityMat.emissiveColor = BABYLON.Color3.Red();
 
+        entityMesh1.material = entityMat;
+        entityMesh2.material = entityMat;
 
-			// meshes
+        // helper
 
-			const pursuerMesh = BABYLON.MeshBuilder.CreateCylinder( 'cone', { height: 0.75, diameterTop: 0, diameterBottom: 0.5 }, scene );
-			pursuerMesh.rotation.x = Math.PI * 0.5;
-			pursuerMesh.bakeCurrentTransformIntoVertices();
+        linePoints[0] = entityMesh1.position;
+        linePoints[1] = entityMesh2.position;
 
+        lines = BABYLON.MeshBuilder.CreateLines("lines", {
+          points: linePoints,
+          updatable: true,
+        });
+        lines.color = BABYLON.Color3.Red();
 
+        //
 
+        window.addEventListener("resize", onWindowResize, false);
 
-			const entityMesh1 = BABYLON.MeshBuilder.CreateBox("entityMesh1", {size: 0.2}, scene);
-			const entityMesh2 = BABYLON.MeshBuilder.CreateBox("entityMesh2", {size: 0.2}, scene);
+        // game setup
 
-			const entityMat =  new BABYLON.StandardMaterial( 'entityMat', scene );
-			entityMat.disableLighting = true;
-			entityMat.emissiveColor = BABYLON.Color3.Red();
+        entityManager = new YUKA.EntityManager();
+        time = new YUKA.Time();
 
-			entityMesh1.material = entityMat;
-			entityMesh2.material = entityMat;
+        target1 = new YUKA.Vector3();
+        target2 = new YUKA.Vector3();
 
-			// helper
+        entity1 = new YUKA.Vehicle();
+        entity1.maxSpeed = 2;
+        entity1.setRenderComponent(entityMesh1, sync);
 
+        const seekBehavior1 = new YUKA.SeekBehavior(target1);
+        entity1.steering.add(seekBehavior1);
 
-            linePoints[0] = entityMesh1.position;
-    		linePoints[1] = entityMesh2.position;
-			
-			lines = BABYLON.MeshBuilder.CreateLines("lines", {
-						points: linePoints,
-						updatable: true
-					});
-			lines.color =  BABYLON.Color3.Red();
-			
-			//
+        entity2 = new YUKA.Vehicle();
+        entity2.maxSpeed = 2;
+        entity2.setRenderComponent(entityMesh2, sync);
 
-			window.addEventListener( 'resize', onWindowResize, false );
+        const seekBehavior2 = new YUKA.SeekBehavior(target2);
+        entity2.steering.add(seekBehavior2);
 
-			// game setup
+        pursuer = new YUKA.Vehicle();
+        pursuer.maxSpeed = 3;
+        pursuer.setRenderComponent(pursuerMesh, sync);
 
-			entityManager = new YUKA.EntityManager();
-			time = new YUKA.Time();
+        const interposeBehavior = new YUKA.InterposeBehavior(
+          entity1,
+          entity2,
+          1
+        );
+        pursuer.steering.add(interposeBehavior);
 
-			target1 = new YUKA.Vector3();
-			target2 = new YUKA.Vector3();
+        entityManager.add(entity1);
+        entityManager.add(entity2);
+        entityManager.add(pursuer);
+      }
 
-			entity1 = new YUKA.Vehicle();
-			entity1.maxSpeed = 2;
-			entity1.setRenderComponent( entityMesh1, sync );
+      function onWindowResize() {
+        engine.resize();
+      }
 
-			const seekBehavior1 = new YUKA.SeekBehavior( target1 );
-			entity1.steering.add( seekBehavior1 );
+      function animate() {
+        requestAnimationFrame(animate);
 
-			entity2 = new YUKA.Vehicle();
-			entity2.maxSpeed = 2;
-			entity2.setRenderComponent( entityMesh2, sync );
+        const delta = time.update().getDelta();
+        const elapsedTime = time.getElapsed();
 
-			const seekBehavior2 = new YUKA.SeekBehavior( target2 );
-			entity2.steering.add( seekBehavior2 );
+        target1.x =
+          Math.cos(elapsedTime * 0.1) * Math.sin(elapsedTime * 0.1) * 6;
+        target1.z = Math.sin(elapsedTime * 0.3) * 6;
 
-			pursuer = new YUKA.Vehicle();
-			pursuer.maxSpeed = 3;
-			pursuer.setRenderComponent( pursuerMesh, sync );
+        target2.x =
+          1 + Math.cos(elapsedTime * 0.5) * Math.sin(elapsedTime * 0.3) * 4;
+        target2.z = 1 + Math.sin(elapsedTime * 0.3) * 6;
 
-			const interposeBehavior = new YUKA.InterposeBehavior( entity1, entity2, 1 );
-			pursuer.steering.add( interposeBehavior );
+        entityManager.update(delta);
 
-			entityManager.add( entity1 );
-			entityManager.add( entity2 );
-			entityManager.add( pursuer );
+        linePoints[0] = entity1.position;
+        linePoints[1] = entity2.position;
 
-		}
+        lines = BABYLON.MeshBuilder.CreateLines("lines", {
+          points: linePoints,
+          instance: lines,
+        });
 
-		function onWindowResize() {
+        scene.render();
+      }
 
-			engine.resize();
+      function sync(entity, renderComponent) {
+        entity.worldMatrix.toArray(entityMatrix.m);
 
-		}
-
-		function animate() {
-
-			requestAnimationFrame( animate );
-
-			const delta = time.update().getDelta();
-			const elapsedTime = time.getElapsed();
-
-			target1.x = Math.cos( elapsedTime * 0.1 ) * Math.sin( elapsedTime * 0.1 ) * 6;
-			target1.z = Math.sin( elapsedTime * 0.3 ) * 6;
-
-			target2.x = 1 + Math.cos( elapsedTime * 0.5 ) * Math.sin( elapsedTime * 0.3 ) * 4;
-			target2.z = 1 + Math.sin( elapsedTime * 0.3 ) * 6;
-
-			entityManager.update( delta );
-
-
-	linePoints[0] = entity1.position
-    linePoints[1] = entity2.position;
-
-lines = BABYLON.MeshBuilder.CreateLines("lines", {
-					points: linePoints,
-					instance: lines
-				});
-
-			scene.render();
-
-		}
-
-		function sync( entity, renderComponent ) {
-
-			entity.worldMatrix.toArray( entityMatrix.m );
-
-			const matrix = renderComponent.getWorldMatrix();
-			matrix.copyFrom( entityMatrix );
-
-		}
-
-	</script>
-
-</body>
+        const matrix = renderComponent.getWorldMatrix();
+        matrix.copyFrom(entityMatrix);
+      }
+    </script>
+  </body>
 </html>
