--- a/babylon-examples/steering/obstacleAvoidance/index.html
+++ b/babylon-examples/steering/obstacleAvoidance/index.html
@@ -1,71 +1,95 @@
 <html lang="en">
-	<head>
-		<title>Yuka | Steering Behaviors | Obstacle Avoidance</title>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
-		<link rel="stylesheet" type="text/css" href="../../lib/styles.css">
-		<link rel="shortcut icon" type="image/x-icon" href="https://mugen87.github.io/yuka/favicon.ico">
+  <head>
+    <title>Yuka | Steering Behaviors | Obstacle Avoidance</title>
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="../../../examples/lib/styles.css"
+    />
+    <link
+      rel="shortcut icon"
+      type="image/x-icon"
+      href="https://mugen87.github.io/yuka/favicon.ico"
+    />
 
-		<script src="https://cdn.jsdelivr.net/npm/babylonjs@4.2.0/babylon.min.js"></script>
-		<script src="https://cdn.babylonjs.com/inspector/babylon.inspector.bundle.js"></script>
-        <script src="https://cdn.babylonjs.com/materialsLibrary/babylonjs.materials.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/babylonjs@4.2.0/babylon.min.js"></script>
+    <script src="https://cdn.babylonjs.com/inspector/babylon.inspector.bundle.js"></script>
+    <script src="https://cdn.babylonjs.com/materialsLibrary/babylonjs.materials.min.js"></script>
+  </head>
+  <body>
+    <section id="info">
+      <p>
+        This steering behavior produces a force so a vehicle avoids obstacles
+        lying in its path.
+      </p>
+    </section>
+    <canvas
+      id="renderCanvas"
+      style="width: 100%; height: 100%; touch-action: none"
+    ></canvas>
+    <script type="module">
+      import * as YUKA from "../../../build/yuka.module.js";
 
-	</head>
-<body>
+      let engine, scene;
 
-	<section id="info">
-		<p>
-			This steering behavior produces a force so a vehicle avoids obstacles lying in its path.
-		</p>
-	</section>
-	<canvas id="renderCanvas" style="width: 100%; height: 100%; touch-action: none"></canvas>
-	<script type="module">
+      let entityManager, time, vehicle;
 
-		import * as YUKA from '../../../build/yuka.module.js';
+      const obstacles = new Array();
 
-		let engine, scene;
+      const entityMatrix = new BABYLON.Matrix();
 
-		let entityManager, time, vehicle;
+      init();
+      animate();
 
-		const obstacles = new Array();
+      function init() {
+        const canvas = document.getElementById("renderCanvas");
+        engine = new BABYLON.Engine(canvas, true, {}, true);
 
-		const entityMatrix = new BABYLON.Matrix();
+        scene = new BABYLON.Scene(engine);
+        scene.clearColor = new BABYLON.Color3(0, 0, 0);
+        //	scene.debugLayer.show();
 
-		init();
-		animate();
+        scene.useRightHandedSystem = true;
 
-		function init() {
+        const camera = new BABYLON.ArcRotateCamera(
+          "camera",
+          BABYLON.Tools.ToRadians(0),
+          BABYLON.Tools.ToRadians(0),
+          35,
+          BABYLON.Vector3.Zero(),
+          scene
+        );
 
-			const canvas = document.getElementById( 'renderCanvas' );
-			engine = new BABYLON.Engine( canvas, true, {}, true );
+        camera.target = new BABYLON.Vector3(0, 0, 0);
+        camera.attachControl(canvas, true);
 
-			scene = new BABYLON.Scene( engine );
-			scene.clearColor = new BABYLON.Color3( 0, 0, 0 );
-		//	scene.debugLayer.show();
+        new BABYLON.HemisphericLight("light", new BABYLON.Vector3(1, 1, 0));
 
-			scene.useRightHandedSystem = true;
+        const ground = BABYLON.MeshBuilder.CreatePlane(
+          "plane",
+          { width: 25, height: 25 },
+          scene
+        );
+        ground.position.x = -1;
+        ground.rotation.x = Math.PI / 2;
 
-		const camera = new BABYLON.ArcRotateCamera("camera", BABYLON.Tools.ToRadians(0), BABYLON.Tools.ToRadians(0), 35, BABYLON.Vector3.Zero(), scene);
+        ground.material = new BABYLON.GridMaterial("grid", scene);
+        ground.material.backFaceCulling = true;
 
-camera.target = new BABYLON.Vector3( 0, 0, 0 );
-camera.attachControl(canvas, true);
+        const vehicleMesh = BABYLON.MeshBuilder.CreateCylinder(
+          "cone",
+          { height: 1, diameterTop: 0, diameterBottom: 0.5 },
+          scene
+        );
+        vehicleMesh.rotation.x = Math.PI * 0.5;
+        vehicleMesh.bakeCurrentTransformIntoVertices();
 
-new BABYLON.HemisphericLight( 'light', new BABYLON.Vector3( 1, 1, 0 ) );
-
-			const ground = BABYLON.MeshBuilder.CreatePlane("plane", {width: 25, height: 25}, scene);
-			ground.position.x = -1;
-			ground.rotation.x = Math.PI/2;
-
-    		ground.material = new BABYLON.GridMaterial("grid", scene);
-			ground.material.backFaceCulling = true;
-
-			const vehicleMesh = BABYLON.MeshBuilder.CreateCylinder( 'cone', { height: 1, diameterTop: 0, diameterBottom: 0.5 }, scene );
-			vehicleMesh.rotation.x = Math.PI * 0.5;
-			vehicleMesh.bakeCurrentTransformIntoVertices();
-
-
-
-			/*
+        /*
 			const ambientLight = new THREE.AmbientLight( 0xcccccc, 0.4 );
 			scene.add( ambientLight );
 
@@ -77,114 +101,118 @@ new BABYLON.HemisphericLight( 'light', new BABYLON.Vector3( 1, 1, 0 ) );
 			scene.add( gridHelper );
 */
 
+        // renderer
 
+        //
 
-			// renderer
+        window.addEventListener("resize", onWindowResize, false);
 
+        // game setup
 
-			//
+        entityManager = new YUKA.EntityManager();
+        time = new YUKA.Time();
 
-			window.addEventListener( 'resize', onWindowResize, false );
+        const path = new YUKA.Path();
+        path.loop = true;
+        path.add(new YUKA.Vector3(10, 0, 10));
+        path.add(new YUKA.Vector3(10, 0, -10));
+        path.add(new YUKA.Vector3(-10, 0, -10));
+        path.add(new YUKA.Vector3(-10, 0, 10));
 
-			// game setup
+        vehicle = new YUKA.Vehicle();
+        vehicle.maxSpeed = 3;
+        vehicle.setRenderComponent(vehicleMesh, sync);
 
-			entityManager = new YUKA.EntityManager();
-			time = new YUKA.Time();
+        vehicle.boundingRadius =
+          vehicleMesh.getBoundingInfo().boundingSphere.radius;
+        vehicle.smoother = new YUKA.Smoother(20);
 
-			const path = new YUKA.Path();
-			path.loop = true;
-			path.add( new YUKA.Vector3( 10, 0, 10 ) );
-			path.add( new YUKA.Vector3( 10, 0, - 10 ) );
-			path.add( new YUKA.Vector3( - 10, 0, - 10 ) );
-			path.add( new YUKA.Vector3( - 10, 0, 10 ) );
+        entityManager.add(vehicle);
 
-			vehicle = new YUKA.Vehicle();
-			vehicle.maxSpeed = 3;
-			vehicle.setRenderComponent( vehicleMesh, sync );
+        const obstacleAvoidanceBehavior = new YUKA.ObstacleAvoidanceBehavior(
+          obstacles
+        );
+        vehicle.steering.add(obstacleAvoidanceBehavior);
 
-			vehicle.boundingRadius = vehicleMesh.getBoundingInfo().boundingSphere.radius;
-			vehicle.smoother = new YUKA.Smoother( 20 );
+        const followPathBehavior = new YUKA.FollowPathBehavior(path);
+        vehicle.steering.add(followPathBehavior);
 
-			entityManager.add( vehicle );
+        // obstacles
 
-			const obstacleAvoidanceBehavior = new YUKA.ObstacleAvoidanceBehavior( obstacles );
-			vehicle.steering.add( obstacleAvoidanceBehavior );
+        setupObstacles();
+      }
 
-			const followPathBehavior = new YUKA.FollowPathBehavior( path );
-			vehicle.steering.add( followPathBehavior );
+      function onWindowResize() {
+        engine.resize();
+      }
 
-			// obstacles
+      function animate() {
+        requestAnimationFrame(animate);
 
-			setupObstacles();
+        const delta = time.update().getDelta();
 
-		}
+        entityManager.update(delta);
 
-		function onWindowResize() {
+        scene.render();
+      }
 
-			engine.resize();
+      function sync(entity, renderComponent) {
+        entity.worldMatrix.toArray(entityMatrix.m);
 
-		}
+        const matrix = renderComponent.getWorldMatrix();
+        matrix.copyFrom(entityMatrix);
+      }
 
-		function animate() {
+      function setupObstacles() {
+        const mesh1 = BABYLON.MeshBuilder.CreateBox(
+          "mesh1",
+          { size: 2 },
+          scene
+        );
+        const mesh2 = BABYLON.MeshBuilder.CreateBox(
+          "mesh1",
+          { size: 2 },
+          scene
+        );
+        const mesh3 = BABYLON.MeshBuilder.CreateBox(
+          "mesh1",
+          { size: 2 },
+          scene
+        );
 
-			requestAnimationFrame( animate );
+        const meshMat = new BABYLON.StandardMaterial("meshMat", scene);
+        meshMat.disableLighting = true;
+        meshMat.emissiveColor = BABYLON.Color3.Red();
 
-			const delta = time.update().getDelta();
+        mesh1.material = meshMat;
+        mesh2.material = meshMat;
+        mesh3.material = meshMat;
 
-			entityManager.update( delta );
+        mesh1.position.set(-10, 0, 0);
+        mesh2.position.set(12, 0, 0);
+        mesh3.position.set(4, 0, -10);
 
-			scene.render();
-		}
+        const obstacle1 = new YUKA.GameEntity();
+        obstacle1.position.copy(mesh1.position);
+        obstacle1.boundingRadius =
+          mesh1.getBoundingInfo().boundingSphere.radius;
+        entityManager.add(obstacle1);
+        obstacles.push(obstacle1);
 
-		function sync( entity, renderComponent ) {
+        const obstacle2 = new YUKA.GameEntity();
+        obstacle2.position.copy(mesh2.position);
+        obstacle2.boundingRadius =
+          mesh2.getBoundingInfo().boundingSphere.radius;
+        entityManager.add(obstacle2);
+        obstacles.push(obstacle2);
 
-			entity.worldMatrix.toArray( entityMatrix.m );
-
-			const matrix = renderComponent.getWorldMatrix();
-			matrix.copyFrom( entityMatrix );
-
-		}
-
-		function setupObstacles() {
-
-			const mesh1 = BABYLON.MeshBuilder.CreateBox("mesh1", {size: 2}, scene);
-			const mesh2 = BABYLON.MeshBuilder.CreateBox("mesh1", {size: 2}, scene);
-			const mesh3 = BABYLON.MeshBuilder.CreateBox("mesh1", {size: 2}, scene);
-
-			const meshMat = new BABYLON.StandardMaterial( 'meshMat', scene );
-			meshMat.disableLighting = true;
-			meshMat.emissiveColor =  BABYLON.Color3.Red( );
-
-			mesh1.material = meshMat;
-			mesh2.material = meshMat;
-			mesh3.material = meshMat;
-
-
-			mesh1.position.set( -10, 0, 0 );
-			mesh2.position.set( 12, 0, 0 );
-			mesh3.position.set( 4, 0, -10 );
-
-			const obstacle1 = new YUKA.GameEntity();
-			obstacle1.position.copy( mesh1.position );
-			obstacle1.boundingRadius = mesh1.getBoundingInfo().boundingSphere.radius;
-			entityManager.add( obstacle1 );
-			obstacles.push( obstacle1 );
-
-			const obstacle2 = new YUKA.GameEntity();
-			obstacle2.position.copy( mesh2.position );
-			obstacle2.boundingRadius = mesh2.getBoundingInfo().boundingSphere.radius;
-			entityManager.add( obstacle2 );
-			obstacles.push( obstacle2 );
-
-			const obstacle3 = new YUKA.GameEntity();
-			obstacle3.position.copy( mesh3.position );
-			obstacle3.boundingRadius = mesh3.getBoundingInfo().boundingSphere.radius;
-			entityManager.add( obstacle3 );
-			obstacles.push( obstacle3 );
-
-		}
-
-	</script>
-
-</body>
+        const obstacle3 = new YUKA.GameEntity();
+        obstacle3.position.copy(mesh3.position);
+        obstacle3.boundingRadius =
+          mesh3.getBoundingInfo().boundingSphere.radius;
+        entityManager.add(obstacle3);
+        obstacles.push(obstacle3);
+      }
+    </script>
+  </body>
 </html>
