--- a/babylon-examples/steering/offsetPursuit/index.html
+++ b/babylon-examples/steering/offsetPursuit/index.html
@@ -1,160 +1,180 @@
 <html lang="en">
-	<head>
-		<title>Yuka | Steering Behaviors | Offset Pursuit</title>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
-		<link rel="stylesheet" type="text/css" href="../../lib/styles.css">
-		<link rel="shortcut icon" type="image/x-icon" href="https://mugen87.github.io/yuka/favicon.ico">
+  <head>
+    <title>Yuka | Steering Behaviors | Offset Pursuit</title>
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="../../../examples/lib/styles.css"
+    />
+    <link
+      rel="shortcut icon"
+      type="image/x-icon"
+      href="https://mugen87.github.io/yuka/favicon.ico"
+    />
 
-		<script src="https://cdn.jsdelivr.net/npm/babylonjs@4.2.0/babylon.min.js"></script>
-		<script src="https://cdn.babylonjs.com/inspector/babylon.inspector.bundle.js"></script>
-        <script src="https://cdn.babylonjs.com/materialsLibrary/babylonjs.materials.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/babylonjs@4.2.0/babylon.min.js"></script>
+    <script src="https://cdn.babylonjs.com/inspector/babylon.inspector.bundle.js"></script>
+    <script src="https://cdn.babylonjs.com/materialsLibrary/babylonjs.materials.min.js"></script>
+  </head>
+  <body>
+    <section id="info">
+      <p>
+        This steering behavior produces a force that keeps a vehicle at a
+        specified offset from a leader vehicle.
+      </p>
+    </section>
+    <canvas
+      id="renderCanvas"
+      style="width: 100%; height: 100%; touch-action: none"
+    ></canvas>
+    <script type="module">
+      import * as YUKA from "../../../build/yuka.module.js";
 
-	</head>
-<body>
+      let engine, scene;
 
-	<section id="info">
-		<p>
-			This steering behavior produces a force that keeps a vehicle at a specified offset from a leader vehicle.
-		</p>
-	</section>
-	<canvas id="renderCanvas" style="width: 100%; height: 100%; touch-action: none"></canvas>
-	<script type="module">
+      let entityManager, time, target;
 
-		import * as YUKA from '../../../build/yuka.module.js';
+      const entityMatrix = new BABYLON.Matrix();
 
-		let engine, scene;
+      init();
+      animate();
 
-		let entityManager, time, target;
+      function init() {
+        const canvas = document.getElementById("renderCanvas");
+        engine = new BABYLON.Engine(canvas, true, {}, true);
 
-		const entityMatrix = new BABYLON.Matrix();
+        scene = new BABYLON.Scene(engine);
+        scene.clearColor = new BABYLON.Color3(0, 0, 0);
+        //	scene.debugLayer.show();
 
-		init();
-		animate();
+        const camera = new BABYLON.ArcRotateCamera(
+          "camera",
+          BABYLON.Tools.ToRadians(90),
+          BABYLON.Tools.ToRadians(0),
+          15,
+          BABYLON.Vector3.Zero(),
+          scene
+        );
 
-		function init() {
+        camera.target = new BABYLON.Vector3(0, 0, 0);
+        camera.attachControl(canvas, true);
 
-			const canvas = document.getElementById( 'renderCanvas' );
-			engine = new BABYLON.Engine( canvas, true, {}, true )
+        new BABYLON.HemisphericLight("light", new BABYLON.Vector3(1, 1, 0));
 
-			scene = new BABYLON.Scene( engine );
-			scene.clearColor = new BABYLON.Color3( 0, 0, 0 );
-		//	scene.debugLayer.show();
+        //
 
-			const camera = new BABYLON.ArcRotateCamera("camera", BABYLON.Tools.ToRadians(90), BABYLON.Tools.ToRadians(0), 15, BABYLON.Vector3.Zero(), scene);
+        const leaderMesh = BABYLON.MeshBuilder.CreateCylinder(
+          "cone",
+          { height: 0.5, diameterTop: 0, diameterBottom: 0.25 },
+          scene
+        );
+        leaderMesh.rotation.x = Math.PI * 0.5;
+        leaderMesh.bakeCurrentTransformIntoVertices();
 
-			camera.target = new BABYLON.Vector3( 0, 0, 0 );
-			camera.attachControl(canvas, true);
+        const followerMeshTemplate = BABYLON.MeshBuilder.CreateCylinder(
+          "cone",
+          { height: 0.5, diameterTop: 0, diameterBottom: 0.25 },
+          scene
+        );
+        followerMeshTemplate.rotation.x = Math.PI * 0.5;
+        followerMeshTemplate.bakeCurrentTransformIntoVertices();
+        followerMeshTemplate.isVisible = false;
 
-			new BABYLON.HemisphericLight( 'light', new BABYLON.Vector3( 1, 1, 0 ) );
+        const ground = BABYLON.MeshBuilder.CreateGround(
+          "ground",
+          { width: 10, height: 10 },
+          scene
+        );
+        ground.position.y = -1;
+        ground.material = new BABYLON.GridMaterial("grid", scene);
 
-			//
-
-			const leaderMesh = BABYLON.MeshBuilder.CreateCylinder( 'cone', { height: 0.5, diameterTop: 0, diameterBottom: 0.25 }, scene );
-			leaderMesh.rotation.x = Math.PI * 0.5;
-			leaderMesh.bakeCurrentTransformIntoVertices();
-
-			const followerMeshTemplate = BABYLON.MeshBuilder.CreateCylinder( 'cone', { height: 0.5, diameterTop: 0, diameterBottom: 0.25 }, scene );
-			followerMeshTemplate.rotation.x = Math.PI * 0.5;
-			followerMeshTemplate.bakeCurrentTransformIntoVertices();
-			followerMeshTemplate.isVisible = false;
-
-			const ground = BABYLON.MeshBuilder.CreateGround("ground", {width: 10, height: 10}, scene);
-			ground.position.y = -1;
-    		ground.material = new BABYLON.GridMaterial("grid", scene);
-
-			/*
+        /*
 			const grid = new THREE.GridHelper( 10, 25 );
 			scene.add( grid );
 */
-			//
+        //
 
-			//
+        //
 
-			window.addEventListener( 'resize', onWindowResize, false );
+        window.addEventListener("resize", onWindowResize, false);
 
-			// game setup
+        // game setup
 
-			entityManager = new YUKA.EntityManager();
-			time = new YUKA.Time();
+        entityManager = new YUKA.EntityManager();
+        time = new YUKA.Time();
 
-			target = new YUKA.Vector3();
+        target = new YUKA.Vector3();
 
-			// leader
+        // leader
 
-			const leader = new YUKA.Vehicle();
-			leader.setRenderComponent( leaderMesh, sync );
+        const leader = new YUKA.Vehicle();
+        leader.setRenderComponent(leaderMesh, sync);
 
-			const seekBehavior = new YUKA.SeekBehavior( target );
-			leader.steering.add( seekBehavior );
+        const seekBehavior = new YUKA.SeekBehavior(target);
+        leader.steering.add(seekBehavior);
 
-			entityManager.add( leader );
+        entityManager.add(leader);
 
-			// follower
+        // follower
 
-			const offsets = [
-				new YUKA.Vector3( 0.5, 0, - 0.5 ),
-				new YUKA.Vector3( - 0.5, 0, - 0.5 ),
-				new YUKA.Vector3( 1.5, 0, - 1.5 ),
-				new YUKA.Vector3( - 1.5, 0, - 1.5 )
-			];
+        const offsets = [
+          new YUKA.Vector3(0.5, 0, -0.5),
+          new YUKA.Vector3(-0.5, 0, -0.5),
+          new YUKA.Vector3(1.5, 0, -1.5),
+          new YUKA.Vector3(-1.5, 0, -1.5),
+        ];
 
-			for ( let i = 0; i < 4; i ++ ) {
+        for (let i = 0; i < 4; i++) {
+          const followerMesh = followerMeshTemplate.clone();
+          followerMesh.isVisible = true;
 
-				const followerMesh = followerMeshTemplate.clone();
-				followerMesh.isVisible = true;
+          const follower = new YUKA.Vehicle();
+          follower.maxSpeed = 2;
+          follower.position.copy(offsets[i]); // initial position
+          follower.scale.set(0.5, 0.5, 0.5); // make the followers a bit smaller
+          follower.setRenderComponent(followerMesh, sync);
 
+          const offsetPursuitBehavior = new YUKA.OffsetPursuitBehavior(
+            leader,
+            offsets[i]
+          );
+          follower.steering.add(offsetPursuitBehavior);
 
-				const follower = new YUKA.Vehicle();
-				follower.maxSpeed = 2;
-				follower.position.copy( offsets[ i ] ); // initial position
-				follower.scale.set( 0.5, 0.5, 0.5 ); // make the followers a bit smaller
-				follower.setRenderComponent( followerMesh, sync );
+          entityManager.add(follower);
+        }
+      }
 
-				const offsetPursuitBehavior = new YUKA.OffsetPursuitBehavior( leader, offsets[ i ] );
-				follower.steering.add( offsetPursuitBehavior );
+      function onWindowResize() {
+        engine.resize();
+      }
 
-				entityManager.add( follower );
+      function animate() {
+        requestAnimationFrame(animate);
 
-			}
+        time.update();
 
-		}
+        const deltaTime = time.getDelta();
+        const elapsedTime = time.getElapsed();
 
-		function onWindowResize() {
+        target.z = Math.cos(elapsedTime * 0.2) * 5;
+        target.x = Math.sin(elapsedTime * 0.2) * 5;
 
-			engine.resize();
+        entityManager.update(deltaTime);
 
-		}
+        scene.render();
+      }
 
+      function sync(entity, renderComponent) {
+        entity.worldMatrix.toArray(entityMatrix.m);
 
-		function animate() {
-
-			requestAnimationFrame( animate );
-
-			time.update();
-
-			const deltaTime = time.getDelta();
-			const elapsedTime = time.getElapsed();
-
-			target.z = Math.cos( elapsedTime * 0.2 ) * 5;
-			target.x = Math.sin( elapsedTime * 0.2 ) * 5;
-
-			entityManager.update( deltaTime );
-
-			scene.render();
-
-		}
-
-		function sync( entity, renderComponent ) {
-
-			entity.worldMatrix.toArray( entityMatrix.m );
-
-			const matrix = renderComponent.getWorldMatrix();
-			matrix.copyFrom( entityMatrix );
-
-		}
-
-	</script>
-
-</body>
+        const matrix = renderComponent.getWorldMatrix();
+        matrix.copyFrom(entityMatrix);
+      }
+    </script>
+  </body>
 </html>
