--- a/babylon-examples/steering/pursuit/index.html
+++ b/babylon-examples/steering/pursuit/index.html
@@ -1,157 +1,178 @@
 <html lang="en">
-	<head>
-		<title>Yuka | Steering Behaviors | Pursuit</title>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
-		<link rel="stylesheet" type="text/css" href="../../lib/styles.css">
-		<link rel="shortcut icon" type="image/x-icon" href="https://mugen87.github.io/yuka/favicon.ico">
+  <head>
+    <title>Yuka | Steering Behaviors | Pursuit</title>
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="../../../examples/lib/styles.css"
+    />
+    <link
+      rel="shortcut icon"
+      type="image/x-icon"
+      href="https://mugen87.github.io/yuka/favicon.ico"
+    />
 
-		<script src="https://cdn.jsdelivr.net/npm/babylonjs@4.2.0/babylon.min.js"></script>
-		<script src="https://cdn.babylonjs.com/inspector/babylon.inspector.bundle.js"></script>
-        <script src="https://cdn.babylonjs.com/materialsLibrary/babylonjs.materials.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/babylonjs@4.2.0/babylon.min.js"></script>
+    <script src="https://cdn.babylonjs.com/inspector/babylon.inspector.bundle.js"></script>
+    <script src="https://cdn.babylonjs.com/materialsLibrary/babylonjs.materials.min.js"></script>
+  </head>
+  <body>
+    <section id="info">
+      <p>
+        "Pursuit" is useful when an agent is required to intercept a moving
+        agent.
+      </p>
+    </section>
+    <canvas
+      id="renderCanvas"
+      style="width: 100%; height: 100%; touch-action: none"
+    ></canvas>
+    <script type="module">
+      import * as YUKA from "../../../build/yuka.module.js";
+      //	import * as THREE from 'https://cdn.jsdelivr.net/npm/three@0.109/build/three.module.js';
+      import * as DAT from "https://cdn.jsdelivr.net/npm/dat.gui@0.7.7/build/dat.gui.module.js";
 
+      let engine, scene;
 
+      let entityManager, time, pursuer, evader, target;
 
-	</head>
-<body>
+      const entityMatrix = new BABYLON.Matrix();
 
-	<section id="info">
-		<p>
-			"Pursuit" is useful when an agent is required to intercept a moving agent.
-		</p>
-	</section>
-	<canvas id="renderCanvas" style="width: 100%; height: 100%; touch-action: none"></canvas>
-	<script type="module">
+      init();
+      animate();
 
-		import * as YUKA from '../../../build/yuka.module.js';
-	//	import * as THREE from 'https://cdn.jsdelivr.net/npm/three@0.109/build/three.module.js';
-		import * as DAT from 'https://cdn.jsdelivr.net/npm/dat.gui@0.7.7/build/dat.gui.module.js';
+      function init() {
+        const canvas = document.getElementById("renderCanvas");
+        engine = new BABYLON.Engine(canvas, true, {}, true);
 
-		let engine, scene;
+        scene = new BABYLON.Scene(engine);
+        scene.clearColor = new BABYLON.Color3(0, 0, 0);
+        //	scene.debugLayer.show();
 
-		let entityManager, time, pursuer, evader, target;
-		
-		const entityMatrix = new BABYLON.Matrix();
+        const camera = new BABYLON.ArcRotateCamera(
+          "camera",
+          BABYLON.Tools.ToRadians(90),
+          BABYLON.Tools.ToRadians(0),
+          15,
+          BABYLON.Vector3.Zero(),
+          scene
+        );
 
-		init();
-		animate();
+        camera.target = new BABYLON.Vector3(0, 0, 0);
+        camera.attachControl(canvas, true);
 
-		function init() {
+        new BABYLON.HemisphericLight("light", new BABYLON.Vector3(1, 1, 0));
 
-			const canvas = document.getElementById( 'renderCanvas' );
-			engine = new BABYLON.Engine( canvas, true, {}, true );
+        const ground = BABYLON.MeshBuilder.CreateGround(
+          "ground",
+          { width: 10, height: 10 },
+          scene
+        );
+        ground.position.y = -1;
+        ground.material = new BABYLON.GridMaterial("grid", scene);
 
-			scene = new BABYLON.Scene( engine );
-			scene.clearColor = new BABYLON.Color3( 0, 0, 0 );
-		//	scene.debugLayer.show();
+        //
 
-			const camera = new BABYLON.ArcRotateCamera("camera", BABYLON.Tools.ToRadians(90), BABYLON.Tools.ToRadians(0), 15, BABYLON.Vector3.Zero(), scene);
+        const pursuerMesh = BABYLON.MeshBuilder.CreateCylinder(
+          "cone",
+          { height: 0.5, diameterTop: 0, diameterBottom: 0.25 },
+          scene
+        );
+        pursuerMesh.rotation.x = Math.PI * 0.5;
+        pursuerMesh.bakeCurrentTransformIntoVertices();
 
-			camera.target = new BABYLON.Vector3( 0, 0, 0 );
-			camera.attachControl(canvas, true);
+        const evaderMesh = BABYLON.MeshBuilder.CreateBox(
+          "box",
+          { size: 0.2 },
+          scene
+        );
 
-			new BABYLON.HemisphericLight( 'light', new BABYLON.Vector3( 1, 1, 0 ) );
+        const evaderMaterial = new BABYLON.StandardMaterial(
+          "evaderMaterial",
+          scene
+        );
+        evaderMaterial.disableLighting = true;
+        evaderMaterial.emissiveColor = new BABYLON.Color3(1, 0, 0);
 
-			const ground = BABYLON.MeshBuilder.CreateGround("ground", {width: 10, height: 10}, scene);
-			ground.position.y = -1;
-    		ground.material = new BABYLON.GridMaterial("grid", scene);
+        evaderMesh.material = evaderMaterial;
 
-			//
-
-			const pursuerMesh  = BABYLON.MeshBuilder.CreateCylinder( 'cone', { height: 0.5, diameterTop: 0, diameterBottom: 0.25 }, scene );
-			pursuerMesh.rotation.x = Math.PI * 0.5;
-			pursuerMesh.bakeCurrentTransformIntoVertices();
-
-			const evaderMesh = BABYLON.MeshBuilder.CreateBox("box", {size: 0.2}, scene);
-			
-			const evaderMaterial = new BABYLON.StandardMaterial("evaderMaterial", scene);
-			evaderMaterial.disableLighting = true;
-			evaderMaterial.emissiveColor = new BABYLON.Color3( 1, 0, 0 );
-			
-			evaderMesh.material = evaderMaterial;
-			
-		/*	
+        /*	
 			const grid = new THREE.GridHelper( 10, 25 );
 			scene.add( grid );
 */
-			//
+        //
 
+        //
 
+        window.addEventListener("resize", onWindowResize, false);
 
-			//
+        // game setup
 
-			window.addEventListener( 'resize', onWindowResize, false );
+        entityManager = new YUKA.EntityManager();
+        time = new YUKA.Time();
 
-			// game setup
+        target = new YUKA.Vector3();
 
-			entityManager = new YUKA.EntityManager();
-			time = new YUKA.Time();
+        evader = new YUKA.Vehicle();
+        evader.maxSpeed = 3;
+        evader.setRenderComponent(evaderMesh, sync);
 
-			target = new YUKA.Vector3();
+        pursuer = new YUKA.Vehicle();
+        pursuer.maxSpeed = 3;
+        pursuer.position.z = -5;
+        pursuer.setRenderComponent(pursuerMesh, sync);
 
-			evader = new YUKA.Vehicle();
-			evader.maxSpeed = 3;
-			evader.setRenderComponent( evaderMesh, sync );
+        const pursuitBehavior = new YUKA.PursuitBehavior(evader, 2);
+        pursuer.steering.add(pursuitBehavior);
 
-			pursuer = new YUKA.Vehicle();
-			pursuer.maxSpeed = 3;
-			pursuer.position.z = - 5;
-			pursuer.setRenderComponent( pursuerMesh, sync );
+        const seekBehavior = new YUKA.SeekBehavior(target);
+        evader.steering.add(seekBehavior);
 
-			const pursuitBehavior = new YUKA.PursuitBehavior( evader, 2 );
-			pursuer.steering.add( pursuitBehavior );
+        entityManager.add(evader);
+        entityManager.add(pursuer);
 
-			const seekBehavior = new YUKA.SeekBehavior( target );
-			evader.steering.add( seekBehavior );
+        // dat.gui
 
-			entityManager.add( evader );
-			entityManager.add( pursuer );
+        const gui = new DAT.GUI({ width: 300 });
 
-			// dat.gui
+        gui
+          .add(pursuitBehavior, "predictionFactor", 0, 5)
+          .name("prediction factor");
 
-			const gui = new DAT.GUI( { width: 300 } );
+        gui.open();
+      }
 
-			gui.add( pursuitBehavior, 'predictionFactor', 0, 5 ).name( 'prediction factor' );
+      function onWindowResize() {
+        engine.resize();
+      }
 
-			gui.open();
+      function animate() {
+        requestAnimationFrame(animate);
 
-		}
+        const deltaTime = time.update().getDelta();
+        const elapsedTime = time.getElapsed();
 
-		function onWindowResize() {
+        target.x = Math.cos(elapsedTime) * Math.sin(elapsedTime * 0.2) * 6;
+        target.z = Math.sin(elapsedTime * 0.8) * 6;
 
-			engine.resize();
+        //	console.log(target.x)
 
-		}
+        entityManager.update(deltaTime);
 
+        scene.render();
+      }
 
-		function animate() {
+      function sync(entity, renderComponent) {
+        entity.worldMatrix.toArray(entityMatrix.m);
 
-			requestAnimationFrame( animate );
-
-			const deltaTime = time.update().getDelta();
-			const elapsedTime = time.getElapsed();
-
-			target.x = Math.cos( elapsedTime ) * Math.sin( elapsedTime * 0.2 ) * 6;
-			target.z = Math.sin( elapsedTime * 0.8 ) * 6;
-
-		//	console.log(target.x)
-
-			entityManager.update( deltaTime );
-
-			scene.render();
-
-		}
-
-		function sync( entity, renderComponent ) {
-
-			entity.worldMatrix.toArray( entityMatrix.m );
-
-			const matrix = renderComponent.getWorldMatrix();
-			matrix.copyFrom( entityMatrix );
-
-		}
-
-	</script>
-
-</body>
+        const matrix = renderComponent.getWorldMatrix();
+        matrix.copyFrom(entityMatrix);
+      }
+    </script>
+  </body>
 </html>
