--- a/babylon-examples/steering/seek/index.html
+++ b/babylon-examples/steering/seek/index.html
@@ -1,137 +1,145 @@
 <html lang="en">
-	<head>
-		<title>Yuka | Steering Behaviors | Seek</title>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
-		<link rel="stylesheet" type="text/css" href="../../lib/styles.css">
-		<link rel="shortcut icon" type="image/x-icon" href="https://mugen87.github.io/yuka/favicon.ico">
-	</head>
-<body>
+  <head>
+    <title>Yuka | Steering Behaviors | Seek</title>
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="../../../examples/lib/styles.css"
+    />
+    <link
+      rel="shortcut icon"
+      type="image/x-icon"
+      href="https://mugen87.github.io/yuka/favicon.ico"
+    />
+  </head>
+  <body>
+    <section id="info">
+      <p>
+        This steering behavior produces a force that directs an agent toward a
+        target position.
+      </p>
+    </section>
 
-	<section id="info">
-		<p>
-			This steering behavior produces a force that directs an agent toward a target position.
-		</p>
-	</section>
+    <script type="module">
+      import * as YUKA from "../../../build/yuka.module.js";
+      import * as THREE from "https://cdn.jsdelivr.net/npm/three@0.109/build/three.module.js";
 
-	<script type="module">
+      let renderer, scene, camera;
 
-		import * as YUKA from '../../../build/yuka.module.js';
-		import * as THREE from 'https://cdn.jsdelivr.net/npm/three@0.109/build/three.module.js';
+      let entityManager, time, vehicle, target;
 
-		let renderer, scene, camera;
+      init();
+      animate();
 
-		let entityManager, time, vehicle, target;
+      function init() {
+        scene = new THREE.Scene();
 
-		init();
-		animate();
+        camera = new THREE.PerspectiveCamera(
+          40,
+          window.innerWidth / window.innerHeight,
+          0.1,
+          1000
+        );
+        camera.position.set(0, 0, 10);
+        camera.lookAt(scene.position);
 
-		function init() {
+        //
 
-			scene = new THREE.Scene();
+        const vehicleGeometry = new THREE.ConeBufferGeometry(0.1, 0.5, 8);
+        vehicleGeometry.rotateX(Math.PI * 0.5);
+        const vehicleMaterial = new THREE.MeshNormalMaterial();
 
-			camera = new THREE.PerspectiveCamera( 40, window.innerWidth / window.innerHeight, 0.1, 1000 );
-			camera.position.set( 0, 0, 10 );
-			camera.lookAt( scene.position );
+        const vehicleMesh = new THREE.Mesh(vehicleGeometry, vehicleMaterial);
+        vehicleMesh.matrixAutoUpdate = false;
+        scene.add(vehicleMesh);
 
-			//
+        const targetGeometry = new THREE.SphereBufferGeometry(0.05);
+        const targetMaterial = new THREE.MeshBasicMaterial({ color: 0xff0000 });
 
-			const vehicleGeometry = new THREE.ConeBufferGeometry( 0.1, 0.5, 8 );
-			vehicleGeometry.rotateX( Math.PI * 0.5 );
-			const vehicleMaterial = new THREE.MeshNormalMaterial();
+        const targetMesh = new THREE.Mesh(targetGeometry, targetMaterial);
+        targetMesh.matrixAutoUpdate = false;
+        scene.add(targetMesh);
 
-			const vehicleMesh = new THREE.Mesh( vehicleGeometry, vehicleMaterial );
-			vehicleMesh.matrixAutoUpdate = false;
-			scene.add( vehicleMesh );
+        //
 
-			const targetGeometry = new THREE.SphereBufferGeometry( 0.05 );
-			const targetMaterial = new THREE.MeshBasicMaterial( { color: 0xff0000 } );
+        const sphereGeometry = new THREE.SphereBufferGeometry(2, 32, 32);
+        const sphereMaterial = new THREE.MeshBasicMaterial({
+          color: 0xcccccc,
+          wireframe: true,
+          transparent: true,
+          opacity: 0.2,
+        });
+        const sphere = new THREE.Mesh(sphereGeometry, sphereMaterial);
+        scene.add(sphere);
 
-			const targetMesh = new THREE.Mesh( targetGeometry, targetMaterial );
-			targetMesh.matrixAutoUpdate = false;
-			scene.add( targetMesh );
+        //
 
-			//
+        renderer = new THREE.WebGLRenderer({ antialias: true });
+        renderer.setPixelRatio(window.devicePixelRatio);
+        renderer.setSize(window.innerWidth, window.innerHeight);
+        document.body.appendChild(renderer.domElement);
 
-			const sphereGeometry = new THREE.SphereBufferGeometry( 2, 32, 32 );
-			const sphereMaterial = new THREE.MeshBasicMaterial( { color: 0xcccccc, wireframe: true, transparent: true, opacity: 0.2 } );
-			const sphere = new THREE.Mesh( sphereGeometry, sphereMaterial );
-			scene.add( sphere );
+        //
 
-			//
+        window.addEventListener("resize", onWindowResize, false);
 
-			renderer = new THREE.WebGLRenderer( { antialias: true } );
-			renderer.setPixelRatio( window.devicePixelRatio );
-			renderer.setSize( window.innerWidth, window.innerHeight );
-			document.body.appendChild( renderer.domElement );
+        // game setup
 
-			//
+        entityManager = new YUKA.EntityManager();
+        time = new YUKA.Time();
 
-			window.addEventListener( 'resize', onWindowResize, false );
+        target = new YUKA.GameEntity();
+        target.setRenderComponent(targetMesh, sync);
 
-			// game setup
+        vehicle = new YUKA.Vehicle();
+        vehicle.setRenderComponent(vehicleMesh, sync);
 
-			entityManager = new YUKA.EntityManager();
-			time = new YUKA.Time();
+        const seekBehavior = new YUKA.SeekBehavior(target.position);
+        vehicle.steering.add(seekBehavior);
 
-			target = new YUKA.GameEntity();
-			target.setRenderComponent( targetMesh, sync );
+        entityManager.add(target);
+        entityManager.add(vehicle);
 
-			vehicle = new YUKA.Vehicle();
-			vehicle.setRenderComponent( vehicleMesh, sync );
+        generateTarget();
+      }
 
-			const seekBehavior = new YUKA.SeekBehavior( target.position );
-			vehicle.steering.add( seekBehavior );
+      function onWindowResize() {
+        camera.aspect = window.innerWidth / window.innerHeight;
+        camera.updateProjectionMatrix();
 
-			entityManager.add( target );
-			entityManager.add( vehicle );
+        renderer.setSize(window.innerWidth, window.innerHeight);
+      }
 
-			generateTarget();
+      function animate() {
+        requestAnimationFrame(animate);
 
-		}
+        const delta = time.update().getDelta();
 
-		function onWindowResize() {
+        entityManager.update(delta);
 
-			camera.aspect = window.innerWidth / window.innerHeight;
-			camera.updateProjectionMatrix();
+        renderer.render(scene, camera);
+      }
 
-			renderer.setSize( window.innerWidth, window.innerHeight );
+      function sync(entity, renderComponent) {
+        renderComponent.matrix.copy(entity.worldMatrix);
+      }
 
-		}
+      function generateTarget() {
+        // generate a random point on a sphere
 
-		function animate() {
+        const radius = 2;
+        const phi = Math.acos(2 * Math.random() - 1);
+        const theta = Math.random() * Math.PI * 2;
 
-			requestAnimationFrame( animate );
+        target.position.fromSpherical(radius, phi, theta);
 
-			const delta = time.update().getDelta();
-
-			entityManager.update( delta );
-
-			renderer.render( scene, camera );
-
-		}
-
-		function sync( entity, renderComponent ) {
-
-			renderComponent.matrix.copy( entity.worldMatrix );
-
-		}
-
-		function generateTarget() {
-
-			// generate a random point on a sphere
-
-			const radius = 2;
-			const phi = Math.acos( ( 2 * Math.random() ) - 1 );
-			const theta = Math.random() * Math.PI * 2;
-
-			target.position.fromSpherical( radius, phi, theta );
-
-			setTimeout( generateTarget, 3000 );
-
-		}
-
-	</script>
-
-</body>
+        setTimeout(generateTarget, 3000);
+      }
+    </script>
+  </body>
 </html>
