--- a/babylon-examples/steering/wander/index.html
+++ b/babylon-examples/steering/wander/index.html
@@ -1,125 +1,134 @@
 <html lang="en">
-	<head>
-		<title>Yuka | Steering Behaviors | Wander</title>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
-		<link rel="stylesheet" type="text/css" href="../../lib/styles.css">
-		<link rel="shortcut icon" type="image/x-icon" href="https://mugen87.github.io/yuka/favicon.ico">
+  <head>
+    <title>Yuka | Steering Behaviors | Wander</title>
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="../../../examples/lib/styles.css"
+    />
+    <link
+      rel="shortcut icon"
+      type="image/x-icon"
+      href="https://mugen87.github.io/yuka/favicon.ico"
+    />
 
-		<script src="https://cdn.jsdelivr.net/npm/babylonjs@4.2.0/babylon.min.js"></script>
-		<script src="https://cdn.babylonjs.com/inspector/babylon.inspector.bundle.js"></script>
-        <script src="https://cdn.babylonjs.com/materialsLibrary/babylonjs.materials.min.js"></script>
-	</head>
-<body>
+    <script src="https://cdn.jsdelivr.net/npm/babylonjs@4.2.0/babylon.min.js"></script>
+    <script src="https://cdn.babylonjs.com/inspector/babylon.inspector.bundle.js"></script>
+    <script src="https://cdn.babylonjs.com/materialsLibrary/babylonjs.materials.min.js"></script>
+  </head>
+  <body>
+    <section id="info">
+      <p>
+        "Wander" produces a steering force that will give the impression of a
+        random walk through the agent’s environment.
+      </p>
+    </section>
+    <canvas
+      id="renderCanvas"
+      style="width: 100%; height: 100%; touch-action: none"
+    ></canvas>
+    <script type="module">
+      import * as YUKA from "../../../build/yuka.module.js";
 
-	<section id="info">
-		<p>
-			"Wander" produces a steering force that will give the impression of a random walk through the agent’s environment.
-		</p>
-	</section>
-	<canvas id="renderCanvas" style="width: 100%; height: 100%; touch-action: none"></canvas>
-	<script type="module">
+      let engine, scene;
 
-		import * as YUKA from '../../../build/yuka.module.js';
+      let entityManager, time;
 
-		let engine, scene;
+      const entityMatrix = new BABYLON.Matrix();
 
-		let entityManager, time;
+      init();
+      animate();
 
-		const entityMatrix = new BABYLON.Matrix();
+      function init() {
+        const canvas = document.getElementById("renderCanvas");
+        engine = new BABYLON.Engine(canvas, true, {}, true);
 
-		init();
-		animate();
+        scene = new BABYLON.Scene(engine);
+        scene.clearColor = new BABYLON.Color3(0, 0, 0);
+        //	scene.debugLayer.show();
 
-		function init() {
+        const camera = new BABYLON.ArcRotateCamera(
+          "camera",
+          BABYLON.Tools.ToRadians(90),
+          BABYLON.Tools.ToRadians(0),
+          25,
+          BABYLON.Vector3.Zero(),
+          scene
+        );
 
-			const canvas = document.getElementById( 'renderCanvas' );
-			engine = new BABYLON.Engine( canvas, true, {}, true );
+        camera.target = new BABYLON.Vector3(0, 0, 0);
+        camera.attachControl(canvas, true);
 
-			scene = new BABYLON.Scene( engine );
-			scene.clearColor = new BABYLON.Color3( 0, 0, 0 );
-		//	scene.debugLayer.show();
+        new BABYLON.HemisphericLight("light", new BABYLON.Vector3(1, 1, 0));
 
-			const camera = new BABYLON.ArcRotateCamera("camera", BABYLON.Tools.ToRadians(90), BABYLON.Tools.ToRadians(0), 25, BABYLON.Vector3.Zero(), scene);
+        const ground = BABYLON.MeshBuilder.CreateGround(
+          "ground",
+          { width: 30, height: 20 },
+          scene
+        );
+        ground.position.y = -1;
+        ground.material = new BABYLON.GridMaterial("grid", scene);
 
-			camera.target = new BABYLON.Vector3( 0, 0, 0 );
-			camera.attachControl(canvas, true);
+        // game setup
 
-			new BABYLON.HemisphericLight( 'light', new BABYLON.Vector3( 1, 1, 0 ) );
+        entityManager = new YUKA.EntityManager();
+        time = new YUKA.Time();
 
-			const ground = BABYLON.MeshBuilder.CreateGround("ground", {width: 30, height: 20}, scene);
-			ground.position.y = -1;
-    		ground.material = new BABYLON.GridMaterial("grid", scene);
+        //
 
-			// game setup
+        for (let i = 0; i < 50; i++) {
+          const vehicleMesh = BABYLON.MeshBuilder.CreateCylinder(
+            "cone",
+            { height: 0.5, diameterTop: 0, diameterBottom: 0.25 },
+            scene
+          );
+          vehicleMesh.rotation.x = Math.PI * 0.5;
+          vehicleMesh.bakeCurrentTransformIntoVertices();
 
-			entityManager = new YUKA.EntityManager();
-			time = new YUKA.Time();
+          const vehicle = new YUKA.Vehicle();
+          vehicle.rotation.fromEuler(0, 2 * Math.PI * Math.random(), 0);
+          vehicle.position.x = 2.5 - Math.random() * 5;
+          vehicle.position.z = 2.5 - Math.random() * 5;
+          vehicle.setRenderComponent(vehicleMesh, sync);
 
-			//
+          const wanderBehavior = new YUKA.WanderBehavior();
+          vehicle.steering.add(wanderBehavior);
 
+          entityManager.add(vehicle);
+        }
 
-			for ( let i = 0; i < 50; i ++ ) {
+        //
 
+        //
 
-			const vehicleMesh = BABYLON.MeshBuilder.CreateCylinder( 'cone', { height: 0.5, diameterTop: 0, diameterBottom: 0.25 }, scene );
-			vehicleMesh.rotation.x = Math.PI * 0.5;
-			vehicleMesh.bakeCurrentTransformIntoVertices();
+        window.addEventListener("resize", onWindowResize, false);
+      }
 
+      function onWindowResize() {
+        engine.resize();
+      }
 
+      function animate() {
+        requestAnimationFrame(animate);
 
+        const delta = time.update().getDelta();
 
-				const vehicle = new YUKA.Vehicle();
-				vehicle.rotation.fromEuler( 0, 2 * Math.PI * Math.random(), 0 );
-				vehicle.position.x = 2.5 - Math.random() * 5;
-				vehicle.position.z = 2.5 - Math.random() * 5;
-				vehicle.setRenderComponent( vehicleMesh, sync );
+        entityManager.update(delta);
 
-				const wanderBehavior = new YUKA.WanderBehavior();
-				vehicle.steering.add( wanderBehavior );
+        scene.render();
+      }
 
-				entityManager.add( vehicle );
+      function sync(entity, renderComponent) {
+        entity.worldMatrix.toArray(entityMatrix.m);
 
-			}
-
-
-			//
-
-
-			//
-
-			window.addEventListener( 'resize', onWindowResize, false );
-
-		}
-
-		function onWindowResize() {
-
-			engine.resize();
-
-		}
-
-		function animate() {
-
-			requestAnimationFrame( animate );
-
-			const delta = time.update().getDelta();
-
-			entityManager.update( delta );
-
-			scene.render();
-
-		}
-
-		function sync( entity, renderComponent ) {
-
-			entity.worldMatrix.toArray( entityMatrix.m );
-
-			const matrix = renderComponent.getWorldMatrix();
-			matrix.copyFrom( entityMatrix );
-
-		}
-
-	</script>
-
-</body>
+        const matrix = renderComponent.getWorldMatrix();
+        matrix.copyFrom(entityMatrix);
+      }
+    </script>
+  </body>
 </html>
